workspace/.metadata/.plugins/org.eclipse.cdt.ui/Electric3DPrinter.build.log
12:52:07 **** Incremental Build of configuration Debug for project Electric3DPrinter ****
make all 
Building file: ../src/electric3Dprinter.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -fopenmp -MMD -MP -MF"src/electric3Dprinter.d" -MT"src/electric3Dprinter.o" -o "src/electric3Dprinter.o" "../src/electric3Dprinter.cpp"
In file included from ../src/electric3Dprinter.h:18:0,
                 from ../src/electric3Dprinter.cpp:39:
../src/electrodes.h:39:21: error: invalid use of non-static data member 'Electrodes::maxElectrodes'
  int electrodeNodes[maxElectrodes][3];
                     ^~~~~~~~~~~~~
../src/electrodes.h:37:36: note: declared here
  const int maxElectrodes = 4*nodes*nodes;
                                    ^~~~~
../src/electrodes.h:42:46: error: array bound is not an integer constant before ']' token
  int QuarterCircleDDA(int r, int circle[nodes][2]);
                                              ^
In file included from ../src/electric3Dprinter.h:19:0,
                 from ../src/electric3Dprinter.cpp:39:
../src/finiteDifference.h:25:11: error: conflicting declaration 'const int nodes'
 const int nodes = 50;
           ^~~~~
In file included from ../src/electric3Dprinter.h:18:0,
                 from ../src/electric3Dprinter.cpp:39:
../src/electrodes.h:16:12: note: previous declaration as 'int nodes'
 extern int nodes;
            ^~~~~
In file included from ../src/electric3Dprinter.h:19:0,
                 from ../src/electric3Dprinter.cpp:39:
../src/finiteDifference.h:41:62: error: array bound is not an integer constant before ']' token
  void OutputDisc(const char* fileName, const double a[nodes+2][nodes+2][nodes+2], const int activeR, const int z);
                                                              ^
../src/finiteDifference.h:41:71: error: array bound is not an integer constant before ']' token
  void OutputDisc(const char* fileName, const double a[nodes+2][nodes+2][nodes+2], const int activeR, const int z);
                                                                       ^
../src/finiteDifference.h:41:80: error: array bound is not an integer constant before ']' token
  void OutputDisc(const char* fileName, const double a[nodes+2][nodes+2][nodes+2], const int activeR, const int z);
                                                                                ^
../src/finiteDifference.h:41:81: error: expected ')' before ',' token
  void OutputDisc(const char* fileName, const double a[nodes+2][nodes+2][nodes+2], const int activeR, const int z);
                                                                                 ^
../src/finiteDifference.h:41:83: error: expected unqualified-id before 'const'
  void OutputDisc(const char* fileName, const double a[nodes+2][nodes+2][nodes+2], const int activeR, const int z);
                                                                                   ^~~~~
../src/finiteDifference.h:42:64: error: array bound is not an integer constant before ']' token
  void OutputTensor(const char* fileName, const double a[nodes+2][nodes+2][nodes+2]);
                                                                ^
../src/finiteDifference.h:42:73: error: array bound is not an integer constant before ']' token
  void OutputTensor(const char* fileName, const double a[nodes+2][nodes+2][nodes+2]);
                                                                         ^
../src/finiteDifference.h:42:82: error: array bound is not an integer constant before ']' token
  void OutputTensor(const char* fileName, const double a[nodes+2][nodes+2][nodes+2]);
                                                                                  ^
../src/finiteDifference.h:64:26: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                          ^
../src/finiteDifference.h:64:35: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                                   ^
../src/finiteDifference.h:64:44: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                                            ^
../src/finiteDifference.h:64:68: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                                                                    ^
../src/finiteDifference.h:64:77: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                                                                             ^
../src/finiteDifference.h:64:86: error: array bound is not an integer constant before ']' token
  double potential[nodes+2][nodes+2][nodes+2], lastPotential[nodes+2][nodes+2][nodes+2];
                                                                                      ^
../src/finiteDifference.h:71:22: error: array bound is not an integer constant before ']' token
  double field[nodes+2][nodes+2][nodes+2],
                      ^
../src/finiteDifference.h:71:31: error: array bound is not an integer constant before ']' token
  double field[nodes+2][nodes+2][nodes+2],
                               ^
../src/finiteDifference.h:71:40: error: array bound is not an integer constant before ']' token
  double field[nodes+2][nodes+2][nodes+2],
                                        ^
../src/finiteDifference.h:72:31: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                               ^
../src/finiteDifference.h:72:40: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                                        ^
../src/finiteDifference.h:72:49: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                                                 ^
../src/finiteDifference.h:72:85: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                                                                                     ^
../src/finiteDifference.h:72:94: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                                                                                              ^
../src/finiteDifference.h:72:103: error: array bound is not an integer constant before ']' token
         chargeIntegral[nodes+2][nodes+2][nodes+2], thresholdedChargeIntegral[nodes+2][nodes+2][nodes+2];
                                                                                                       ^
../src/finiteDifference.h:77:21: error: array bound is not an integer constant before ']' token
  bool inside[nodes+2][nodes+2][nodes+2];
                     ^
../src/finiteDifference.h:77:30: error: array bound is not an integer constant before ']' token
  bool inside[nodes+2][nodes+2][nodes+2];
                              ^
../src/finiteDifference.h:77:39: error: array bound is not an integer constant before ']' token
  bool inside[nodes+2][nodes+2][nodes+2];
                                       ^
src/subdir.mk:24: recipe for target 'src/electric3Dprinter.o' failed
make: *** [src/electric3Dprinter.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

12:52:07 Build Failed. 31 errors, 0 warnings. (took 387ms)

